--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -1,1 +1,11 @@
-{}
+{
+  "DYNAMIC_WEIGHTS_VERSION": {
+    "description": "The weights version for synthetic jobs",
+    "items": [
+      {
+        "value": 2,
+        "reason": "for testing!"
+      }
+    ]
+  }
+}
