--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -7,5 +7,14 @@
         "reason": "for testing!"
       }
     ]
+  },
+  "DYNAMIC_MANIFEST_SCORE_MULTIPLIER": {
+    "description": "The bonus rate for miners changing their horde size",
+    "items": [
+      {
+        "value": 1.1,
+        "reason": "for testing!"
+      }
+    ]
   }
 }
