--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -7,5 +7,14 @@
         "reason": "enable anti weight copying dance"
       }
     ]
+  },
+  "DYNAMIC_MANIFEST_SCORE_MULTIPLIER": {
+    "description": "The bonus rate for miners changing their horde size",
+    "items": [
+      {
+        "value": 1.1,
+        "reason": "anti weight copying bonus"
+      }
+    ]
   }
 }
