--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -8,6 +8,15 @@
       }
     ]
   },
+  "DYNAMIC_SYNTHETIC_JOBS_FLOW_VERSION": {
+    "description": "The synthetic jobs flow version",
+    "items": [
+      {
+        "value": 2,
+        "reason": "for testing!"
+      }
+    ]
+  },
   "DYNAMIC_MANIFEST_SCORE_MULTIPLIER": {
     "description": "The bonus rate for miners changing their horde size",
     "items": [
