--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -25,5 +25,41 @@
         "reason": "anti weight copying bonus"
       }
     ]
+  },
+  "DYNAMIC_BLOCK_FINALIZATION_NUMBER": {
+    "description": "After this many blocks pass, a block can be considered final",
+    "items": [
+      {
+        "value": 3,
+        "reason": "Before 3 blocks pass, subtensor may be in disagreement"
+      }
+    ]
+  },
+  "DYNAMIC_COMMIT_REVEAL_WEIGHTS_ENABLED": {
+    "description": "This should be synced with the hyperparam",
+    "items": [
+      {
+        "value": true,
+        "reason": "True"
+      }
+    ]
+  },
+  "DYNAMIC_COMMIT_REVEAL_WEIGHTS_INTERVAL": {
+    "description": "In blocks. This should be synced with the hyperparam",
+    "items": [
+      {
+        "value": 370,
+        "reason": "This value assures the reveal happens in the next epoch"
+      }
+    ]
+  },
+  "DYNAMIC_MAX_WEIGHT": {
+    "description": "This should be synced with the hyperparam",
+    "items": [
+      {
+        "value": 65535,
+        "reason": "Default value"
+      }
+    ]
   }
 }
