--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -9,7 +9,7 @@
       {
         "value": 3,
         "reason": "binary score (0 or 1 * dancing bonus)",
-        "effective_from": "2024-08-29 06:28:24.379447+00"
+        "effective_from": "2024-08-29T06:28:24.000Z"
       }
     ]
   },
@@ -32,7 +32,7 @@
       {
         "value": 3.0,
         "reason": "anti weight copying bonus from 15% -> 200%",
-        "effective_from": "2024-08-29 06:28:24.379447+00"
+        "effective_from": "2024-08-29T06:28:24.000Z"
       }
     ]
   },
