--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -33,7 +33,12 @@
         "value": 3.0,
         "reason": "anti weight copying bonus from 15% -> 200%",
         "effective_from": "2024-08-29T06:28:24.000Z"
-      }
+      },
+      {
+        "value": 1.3,
+        "reason": "anti weight copying bonus from 200 -> 30%",
+        "effective_from": "2024-09-16T09:25:00.000Z"
+      },
     ]
   },
   "DYNAMIC_BLOCK_FINALIZATION_NUMBER": {
