--- a/validator-config-staging.json
+++ b/validator-config-staging.json
@@ -54,20 +54,29 @@
     ]
   },
   "DYNAMIC_COMMIT_REVEAL_COMMIT_START_OFFSET": {
-    "description": "In blocks",
+    "description": "In blocks. The offset separating commit and reveal windows in the commit-reveal interval",
     "items": [
       {
 	"value": 361,
-	"reason": "This value assures commiting starts in the second epoch of the cycle"
+	"reason": "Use the first epoch for revealing and the second for committing"
       }
     ]
   },
   "DYNAMIC_COMMIT_REVEAL_COMMIT_END_BUFFER": {
-    "description": "In blocks",
+    "description": "In blocks. The buffer at the end of the commit window, in which no further commiting allowed.",
     "items": [
       {
 	"value": 15,
-	"reason": "This value establishes a buffer to stop commiting in advance before revealing starts"
+	"reason": "Ensure commiting does not happen outside of the window"
+      }
+    ]
+  },
+  "DYNAMIC_COMMIT_REVEAL_REVEAL_END_BUFFER": {
+    "description": "In blocks. The buffer at the end of the reveal window, in which no further revealing allowed.",
+    "items": [
+      {
+	"value": 15,
+	"reason": "Ensure revealing does not happend outside of the window"
       }
     ]
   },
