--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -10,6 +10,11 @@
         "value": 3,
         "reason": "binary score (0 or 1 * dancing bonus)",
         "effective_from": "2024-08-29T06:28:24.000Z"
+      },
+      {
+        "value": 4,
+        "reason": "optimized job sending flow",
+        "effective_from": "2024-10-03T10:43:20.000Z"
       }
     ]
   },
