--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -115,6 +115,11 @@
             {
                 "value": "spin_up-4min.gpu-24gb=95,always_on.llm.a6000=5",
                 "reason": "Increase a6000 class weight to 5%"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=90,always_on.llm.a6000=10",
+                "reason": "Increase a6000 class weight to 10%",
+		"effective_from": "2024-10-29T22:14:24.000Z"
             }
         ]
     }
