--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -120,6 +120,11 @@
                 "value": "spin_up-4min.gpu-24gb=90,always_on.llm.a6000=10",
                 "reason": "Increase a6000 class weight to 10%",
 		"effective_from": "2024-10-29T22:14:24.000Z"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=85,always_on.llm.a6000=15",
+                "reason": "Increase a6000 class weight to 15%",
+		"effective_from": "2024-10-31T13:10:24.000Z"
             }
         ]
     },
