--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -132,7 +132,12 @@
 		 {
 			"value": "always_on.llm.a6000=5",
 			"reason": "support higher number of executors"
-		 }
+		 },
+            {
+                "value": "value": "always_on.llm.a6000=10",
+                "reason": "Increase a6000 executor class limit to 10",
+		"effective_from": "2024-12-02T13:45:24.000Z"
+            }
 	    ]
     }
 }
