--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -125,6 +125,11 @@
                 "value": "spin_up-4min.gpu-24gb=85,always_on.llm.a6000=15",
                 "reason": "Increase a6000 class weight to 15%",
 		"effective_from": "2024-10-31T13:10:24.000Z"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=75,always_on.llm.a6000=25",
+                "reason": "Increase a6000 class weight to 25%",
+		"effective_from": "2024-12-02T13:45:24.000Z"
             }
         ]
     },
@@ -154,7 +159,7 @@
 			"reason": "support higher number of executors"
 		 },
             {
-                "value": "value": "always_on.llm.a6000=10",
+                "value": "always_on.llm.a6000=10",
                 "reason": "Increase a6000 executor class limit to 10",
 		"effective_from": "2024-12-02T13:45:24.000Z"
             }
