--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -130,6 +130,11 @@
                 "value": "spin_up-4min.gpu-24gb=75,always_on.llm.a6000=25",
                 "reason": "Increase a6000 class weight to 25%",
 		"effective_from": "2024-12-02T13:45:24.000Z"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=65,always_on.llm.a6000=35",
+                "reason": "Increase a6000 class weight to 35%",
+		"effective_from": "2024-12-04T10:50:24.000Z"
             }
         ]
     },
