--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -149,6 +149,11 @@
                 "value": "spin_up-4min.gpu-24gb=55,always_on.llm.a6000=45",
                 "reason": "Increase a6000 class weight to 45%",
 		"effective_from": "2025-01-14T11:45:24.000Z"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=45,always_on.llm.a6000=55",
+                "reason": "Increase a6000 class weight to 55%",
+		"effective_from": "2025-01-15T13:45:24.000Z"
             }
         ]
     },
