--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -154,6 +154,11 @@
                 "value": "spin_up-4min.gpu-24gb=45,always_on.llm.a6000=55",
                 "reason": "Increase a6000 class weight to 55%",
 		"effective_from": "2025-01-15T13:45:24.000Z"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=25,always_on.llm.a6000=75",
+                "reason": "Increase a6000 class weight to 75%",
+		"effective_from": "2025-01-16T16:55:24.000Z"
             }
         ]
     },
