--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -159,6 +159,11 @@
                 "value": "spin_up-4min.gpu-24gb=25,always_on.llm.a6000=75",
                 "reason": "Increase a6000 class weight to 75%",
 		"effective_from": "2025-01-16T16:55:24.000Z"
+            },
+            {
+                "value": "spin_up-4min.gpu-24gb=5,always_on.llm.a6000=95",
+                "reason": "Increase a6000 class weight to 95%",
+		"effective_from": "2025-01-17T14:00:24.000Z"
             }
         ]
     },
