--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -226,5 +226,14 @@
 			"reason": "Some valis are failing after the default 5.0s"
 		 }
 	    ]
+    },
+    "DYNAMIC_SYNTHETIC_STREAMING_JOB_EXECUTOR_CLASSES": {
+	    "description": "These executor classes use streaming",
+	    "items": [
+		 {
+			"value": ["always_on.llm.a6000"],
+			"reason": "it's just the way it is now"
+		 }
+	    ]
     }
 }
