--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -59,8 +59,8 @@
     "description": "This should be synced with the hyperparam",
     "items": [
       {
-        "value": true,
-        "reason": "True"
+        "value": false,
+        "reason": "False"
       }
     ]
   },
