Enable collection of receipts for transfer

--- a/miner-config-prod.json
+++ b/miner-config-prod.json
@@ -1,1 +1,11 @@
-{}
+{
+  "DYNAMIC_RECEIPT_TRANSFER_ENABLED": {
+    "description": "",
+    "items": [
+      {
+        "value": true,
+        "reason": "Needed for reliability of organic job routing"
+      }
+    ]
+  }
+}
