--- a/miner-config-prod.json
+++ b/miner-config-prod.json
@@ -16,8 +16,8 @@
           "backenddevelopersltd/compute-horde-job:v0-latest",
           "backenddevelopersltd/compute-horde-job:v1-latest",
           "backenddevelopersltd/compute-horde-prompt-solver:v0-latest",
-          "diagonalge/person_synth:latest",
-          "diagonalge/tuning_validator_diffusion:latest"
+          "backenddevelopersltd/ch-sn56-tuning_vali",
+          "backenddevelopersltd/ch-sn56-tuning_validator_diffusion"
         ],
         "reason": "Needed for executor jobs, otherwise they will time out while pulling images"
       }
