--- a/miner-config-prod.json
+++ b/miner-config-prod.json
@@ -13,6 +13,7 @@
     "items": [
       {
         "value": [
+          "backenddevelopersltd/compute-horde-executor:v1-latest",
           "backenddevelopersltd/compute-horde-job:v0-latest",
           "backenddevelopersltd/compute-horde-job:v1-latest",
           "backenddevelopersltd/compute-horde-prompt-solver:v0-latest",
