this is not Python...

--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -318,7 +318,7 @@
       "description": "",
       "items": [
      {
-      "value": False,
+      "value": false,
       "reason": "Temporarily ignore allowance on preprod for reliability"
      }
       ]
