--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -273,8 +273,8 @@
 	    "description": "",
 	    "items": [
 		 {
-			"value": 0.995,
-			"reason": "he SN12 alpha price has increased significantly. We are adjusting the burn rate to avoid encouraging too many miners until we actually need more GPUs."
+			"value": 0.99,
+			"reason": "decreasing burn to allow for more compute"
 		 }
 	    ]
     },
