--- a/validator-config-preprod.json
+++ b/validator-config-preprod.json
@@ -264,7 +264,7 @@
     "description": "",
     "items": [
       {
-        "value": "5Hjbf5s2Cb4xuYGLKUGVEkwQrMpSMYvnatJxVenMnjodtEKi,5G3iqUhDEx7fsitZGsYaqtHyC4qiQAU8MK6YGfsHFvw5tUbx,5Eym5ZrFCQERszCTn13vbA2J9cfQbY7rk44yxVDN5hb7d4AU,5EbhSyVZ32awHNAhRQrZA5wsmzZJJuM2EggSy9VdBMo1WzFv",
+        "value": "5Hjbf5s2Cb4xuYGLKUGVEkwQrMpSMYvnatJxVenMnjodtEKi,5G3iqUhDEx7fsitZGsYaqtHyC4qiQAU8MK6YGfsHFvw5tUbx,5Eym5ZrFCQERszCTn13vbA2J9cfQbY7rk44yxVDN5hb7d4AU,5EbhSyVZ32awHNAhRQrZA5wsmzZJJuM2EggSy9VdBMo1WzFv,5Eqo5UkgycQcVt9Pe8Y6pSExw9Br3znWnqMXnd8cAGRHoYUK,5ENdwRMX9HnnCrscPCdXQpyNM2hFqWp26FyQfyRtAebr8xGL,5Ey26RZ3PU2vYyyTnEi1RUVpjzSZMD5X7Ktn3bMQmKdvkbj5",
         "reason": "more burn targets to fight weight copiers more effectively"
       }
     ]
