--- a/validator-config-prod.json
+++ b/validator-config-prod.json
@@ -122,53 +122,8 @@
     "description": "executor class weights",
     "items": [
       {
-        "value": "spin_up-4min.gpu-24gb=95,always_on.llm.a6000=5",
-        "reason": "Increase a6000 class weight to 5%"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=90,always_on.llm.a6000=10",
-        "reason": "Increase a6000 class weight to 10%",
-        "effective_from": "2024-10-29T22:14:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=85,always_on.llm.a6000=15",
-        "reason": "Increase a6000 class weight to 15%",
-        "effective_from": "2024-10-31T13:10:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=75,always_on.llm.a6000=25",
-        "reason": "Increase a6000 class weight to 25%",
-        "effective_from": "2024-12-02T13:45:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=65,always_on.llm.a6000=35",
-        "reason": "Increase a6000 class weight to 35%",
-        "effective_from": "2024-12-04T10:50:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=55,always_on.llm.a6000=45",
-        "reason": "Increase a6000 class weight to 45%",
-        "effective_from": "2025-01-14T11:45:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=45,always_on.llm.a6000=55",
-        "reason": "Increase a6000 class weight to 55%",
-        "effective_from": "2025-01-15T13:45:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=25,always_on.llm.a6000=75",
-        "reason": "Increase a6000 class weight to 75%",
-        "effective_from": "2025-01-16T16:55:24.000Z"
-      },
-      {
-        "value": "spin_up-4min.gpu-24gb=5,always_on.llm.a6000=95",
-        "reason": "Increase a6000 class weight to 95%",
-        "effective_from": "2025-01-17T14:00:24.000Z"
-      },
-      {
-        "value": "always_on.llm.a6000=100",
-        "reason": "Only A6000 supported",
-        "effective_from": "2025-01-29T11:45:24.000Z"
+        "value": "always_on.cpu.8c.16gb=100",
+        "reason": ""
       }
     ]
   },
